# bxScriptEngine

./: CMakeLists.txt  README.md  addon.json  bxScriptEngine.cpp  bxScriptEngine.h
examples/: CMakeLists.txt
examples/simple_console/: CMakeLists.txt  app.h  main.cpp
